# lit-review

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  extract_abstracts.py  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js
api/: config.py  index.py  pipeline.py  vectorstore.py
pages/: _app.tsx  _document.tsx  generate.tsx  index.tsx
