[project]
name = "lit-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.30.0",
    "openai-agents>=0.3.3",
    "python-dotenv>=1.1.1",
    "openai>=2.5.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "python-multipart>=0.0.17",
    "rank-bm25>=0.2.2",
    "nest-asyncio>=1.6.0",
]
